make the page responsive

--- a/main.css
+++ b/main.css
@@ -309,3 +309,107 @@ a {
 #confirmBTN:hover {
   background-color: hsl(0, 0%, 90%);
 }
+
+/* MEDIA QUERIES */
+
+/* For tablets (max-width: 768px) */
+@media (max-width: 560px) {
+  body {
+    height: auto;
+    padding: 10px;
+  }
+
+  #title {
+    font-size: 20px;
+    flex-direction: column;
+    text-align: center;
+  }
+
+  #title img {
+    width: 70px;
+    margin-bottom: 10px;
+  }
+
+  #moves-container {
+    width: 90%;
+    height: 190px;
+    padding: 10px;
+  }
+
+  #rockBTN,
+  #paperBTN,
+  #scissorBTN {
+    width: 100px;
+    height: 100px;
+    border-radius: 50px;
+  }
+
+  #resetScoreBTN {
+    width: 150px;
+    height: 45px;
+    font-size: 12px;
+  }
+
+  #socials {
+    position: relative;
+    bottom: auto;
+    margin-top: 20px;
+  }
+
+  #resetModalContent {
+    margin: 60% auto;
+  }
+
+  #modal-content {
+    margin: 60% auto;
+  }
+}
+
+/* For mobile phones (max-width: 480px) */
+@media (max-width: 380px) {
+  body {
+    padding: 10px;
+  }
+
+  #title {
+    font-size: 18px;
+    display: flex;
+    flex-direction: column;
+  }
+
+  #title img {
+    width: 70px;
+  }
+
+  #moves-container {
+    width: 100%;
+    height: auto;
+    align-items: center;
+    height: 190px;
+  }
+
+  #rockBTN,
+  #paperBTN,
+  #scissorBTN {
+    width: 90px;
+    height: 90px;
+    border-radius: 45px;
+  }
+
+  #resetScoreBTN {
+    width: 130px;
+    height: 40px;
+    font-size: 10px;
+  }
+
+  #socials img {
+    width: 20px;
+  }
+
+  #resetModalContent {
+    margin: 75% auto;
+  }
+  #modal-content {
+    margin: 70% auto;
+  }
+}
