--- a/main.css
+++ b/main.css
@@ -384,7 +384,7 @@ a {
   #moves-container {
     width: 90%;
     align-items: center;
-    height: 190px;
+    height: 150px;
   }
 
   #select-move {
@@ -423,5 +423,29 @@ a {
 
   #moveResult {
     font-size: 13px;
+  }
+
+  #score {
+    margin-top: 0px;
+  }
+
+  #myScoreContainer {
+    width: 80px;
+    height: 60px;
+    font-size: 1.7rem;
+  }
+
+  #computerScoreContainer {
+    width: 80px;
+    height: 60px;
+    font-size: 1.7rem;
+  }
+
+  #myScore p {
+    font-size: 0.8rem;
+  }
+
+  #computerScore p {
+    font-size: 0.8rem;
   }
 }
